deployments/pathweb/workloads/media-services/watchstate/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: watchstate
  namespace: media-services
  labels:
    app.kubernetes.io/name: watchstate
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - watchstate.services.home.yrf.me
  rules:
  - backendRefs:
    - name: watchstate
      port: 8080
