deployments/pathweb/workloads/media-services/watchstate/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: watchstate-network-policy
  namespace: media-services
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: watchstate
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": traefik
    - matchLabels:
        app.kubernetes.io/name: plex
    - matchLabels:
        app.kubernetes.io/name: jellyfin
    - matchLabels:
        app.kubernetes.io/name: tautulli
  - fromEntities:
    - ingress
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  # Allow connecting to Plex and Jellyfin in the same namespace
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: plex
    - matchLabels:
        app.kubernetes.io/name: jellyfin
  # Allow connecting to external APIs (GitHub for updates, etc)
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
